<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp"
    >

    <EditText
        android:id="@+id/edit_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/text_hint"
        style="@style/EditText1Style"

        />

    <TextView
        android:id="@+id/txt_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_view_1"
        style="@style/TextView1Style"
        />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/txt_view_1"
        app:layout_constraintStart_toStartOf="parent"
        >

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/text_rd_btn_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_view_1"
            style="@style/RadioButtonStyle"
            />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_marginStart="4dp"
            android:text="@string/text_rd_btn_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_button_1"
            style="@style/RadioButtonStyle"
            />

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_marginStart="4dp"
            android:text="@string/text_rd_btn_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_button_2"
            style="@style/RadioButtonStyle"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/txt_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_view_2"
        style="@style/TextView2Style"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/txt_view_2"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        android:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_2"
        android:text="@string/text_btn_1"
        style="@style/ButtonStyle"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_1"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_view_3"
        style="@style/TextView1Style"
        />

    <ImageView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_1"
        android:src="@drawable/ic_messages"
        style="@style/ImageViewStyle"
        />


</androidx.constraintlayout.widget.ConstraintLayout>